fix spacing around query block

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -296,3 +296,8 @@ body .gform_wrapper .gform-body .gsection_title {
 	padding-top: var(--cp-gap--xl);
 	padding-bottom: var(--cp-gap--xl);
 }
+
+.wp-block-query {
+	margin-top: var(--cp-gap--main);
+	margin-bottom: var(--cp-gap--main);
+}
